# Avaliacao_PI

./: README.md  pyproject.toml
config/: routers.py  settings.py  urls.py
core/escola/: admin.py  urls.py
core/escola/cordenacao/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
core/escola/cordenacao/migrations/: 0001_initial.py
core/escola/migrations/: 0001_initial.py  0002_remove_aluno_periodo_remove_user_cpf.py
core/escola/modelosteste/: __init__.py  aluno.py  escola.py  professor.py  turma.py  user.py
core/escola/models/: aluno.py  professor.py  turma.py
core/escola/serializers/: __init__.py  alunos.py  escola.py  professores.py  turma.py  user.py
core/escola/views/: __init__.py  aluno.py  escola.py  professor.py  turma.py  user.py
tests/: test_models.py  test_serializers.py  test_views.py
